# catch2-example

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-single-platform.yml  codeql.yml
include/: demo.h
src/: demo.cpp
tests/: CMakeLists.txt  test_demo.cpp
